--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+html{
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  height: 100vh;
+  margin: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.grid-container{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 5rem 1fr 5rem;
+  height: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
+  background-color: slategray;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+a{
+  text-decoration: none;
+}
+.brand button{
+  font-size: 1.5rem;
+  padding: .5rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+.brand a{
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-decoration: none;
+  /* text-align: center; */
+}
+.header-item a{
+  color: white;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-right: 10px;
+}
+.header-item a:hover{
+  color:coral;
+}
+.footer{
+  background-color: darkgray;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+}
+.products{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.product{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  height: 80%;
 }
-
-.App-link {
-  color: #61dafb;
+.products li{
+  flex: 0 2 20rem;
+  margin: 1rem;
+  height: 30rem;
+  border-bottom: .1rem gray solid;
+  list-style-type: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product img{
+  max-width: 25rem;
+  max-height: 20rem;
+}
+.product-name{
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-bottom: 5px;
+}
+.product-brand{
+  font-size: 1rem;
+}
+.product-price{
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px;
+}
+.sidebar{
+  position: fixed;
+  transform: translateX(-30rem);
+  width: 30rem;
+}
+.sidebar.open{
+  transform: translateX(0);
+  background-color: tomato;
+  height: 100%;
+}
+.close-btn{
+  border-radius: 50%;
+  border: .1rem black solid;
+  width: 3rem;
+  height: 3rem;
+  padding: .5rem;
+  font-size: 2rem;
+  padding-top: 0;
+  cursor: pointer;
+  position: absolute;
+  right: .5rem;
+  top: 1.5rem;
 }
